--- a/JiaoBaoYun-hb/html/show/show-detail.html
+++ b/JiaoBaoYun-hb/html/show/show-detail.html
@@ -101,19 +101,19 @@
 					}
 					return true;
 				},
-//				pullRefresh: {
-//					container: '#show-detail',
-//					down: {
-//						style: 'circle',
-//						offset: '50px',
-//						callback: pulldownRefresh
-//					},
-//					up: {
-//						auto: true,
-//						contentrefresh: '正在加载...',
-//						callback: pullupRefresh
-//					}
-//				},
+				pullRefresh: {
+					container: '#show-detail',
+					down: {
+						style: 'circle',
+						offset: '50px',
+						callback: pulldownRefresh
+					},
+					up: {
+						auto: true,
+						contentrefresh: '正在加载...',
+						callback: pullupRefresh
+					}
+				},
 				gestureConfig: {
 					longtap: true
 				}
