0006259: 老师和家长双重身份 且无作业 不能下拉刷新

--- a/JiaoBaoYun-hb/html/homework/homework-tea.html
+++ b/JiaoBaoYun-hb/html/homework/homework-tea.html
@@ -83,7 +83,7 @@
 				background-image: url(../../image/homework/commented.png);
 			}
 			
-			.noCommentedBG .img-container{
+			.noCommentedBG .img-container {
 				background-image: url(../../image/homework/no-comment.png);
 			}
 			
@@ -94,7 +94,6 @@
 			.submitOnline .img-container {
 				background-image: url(../../image/homework/need-submit.png);
 			}
-			
 		</style>
 	</head>
 
@@ -136,11 +135,12 @@
 				<div class="mui-scroll vertical-scroll">
 					<ul id="list-container" class="mui-table-view">
 					</ul>
+					<div class="noDataDisplay" style="padding-bottom: 45%; background-color: white; width: 100%;height: 100%; text-align: center;display: none;">
+						<img src="../../image/qiuzhi/qiuzhi_noanswer.png" style="width: 50%; margin: 25% 0 15px;" />
+						<p style="font-size: 1.6rem;">暂无作业~~</p>
+					</div>
 				</div>
-				<div class="noDataDisplay" style="position: fixed; top: 85px;left: 0;bottom: 0; background-color: white; width: 100%;height: 100%; text-align: center;display: none;">
-					<img src="../../image/qiuzhi/qiuzhi_noanswer.png" style="width: 50%; margin: 25% 0 15px;" />
-					<p style="font-size: 1.6rem;">暂无作业~~</p>
-				</div>
+
 			</div>
 		</div>
 		<a id="iconPublish" class="mui-icon iconfont icon-tianjia"></a>
